[STYLE] [WEBAPP] Aligned login card in Safari and other fixed for Safari.

--- a/webapp/src/main/webapp/resources/css/jimi-rest/jimi-rest.css
+++ b/webapp/src/main/webapp/resources/css/jimi-rest/jimi-rest.css
@@ -4,6 +4,14 @@
     font-size: 25px;
 }
 
+.page-logo {
+    box-sizing: border-box;
+}
+
+.page-footer {
+    box-sizing: border-box;
+}
+
 .page-content-register-user {
     min-height: 600px;
     margin-top: 80px;
@@ -18,7 +26,9 @@
     text-align: center;
 }
 
-.card-box-register-user {
+.card-box-user {
+    margin: 0 auto;
+    float: none;
     max-width: 30em;
 }
 
